--- a/neonapp/pubspec.yaml
+++ b/neonapp/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+ 
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +60,15 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    # - images/a_dot_burr.jpeg
+    # - images/a_dot_ham.jpeg
+     - assets/images/bali.jpeg
+     - assets/images/banff.jpeg
+     - assets/images/kyoto.jpeg
+     - assets/images/santorini.jpeg
+     - assets/images/seychelles.jpeg
+     - assets/images/cappadocia.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
