--- a/neonapp/pubspec.yaml
+++ b/neonapp/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
+  http: ^1.4.0
  
 
 dev_dependencies:
@@ -70,6 +71,14 @@ flutter:
      - assets/images/santorini.jpeg
      - assets/images/seychelles.jpeg
      - assets/images/cappadocia.jpeg
+     - assets/images/matt.jpeg
+     - assets/images/updating.jpeg
+     - assets/images/club.jpeg
+     - assets/images/mainclub.jpeg
+     - assets/images/standup.jpeg
+     - assets/images/tolgshow.jpeg
+     - assets/images/improv.jpeg
+     - assets/images/comedyfest.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
