--- a/neonapp/pubspec.yaml
+++ b/neonapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.20.2
   http: ^1.4.0
   image_picker: ^1.1.2
+  in_app_purchase: ^3.2.3
  
 
 dev_dependencies:
@@ -81,6 +82,7 @@ flutter:
      - assets/images/improv.jpeg
      - assets/images/comedyfest.jpeg
      - assets/images/maze.jpeg
+     - assets/images/logo.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
