--- a/neonapp/ios/Runner/Info.plist
+++ b/neonapp/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>GADApplicationIdentifier</key>
+    <string>ca-app-pub-7043447797657735~3544914133</string>
 </dict>
 </plist>
