--- a/neonapp/pubspec.yaml
+++ b/neonapp/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.4.0
   image_picker: ^1.1.2
   in_app_purchase: ^3.2.3
+  google_mobile_ads: ^5.3.1
  
 
 dev_dependencies:
