--- a/neonapp/pubspec.yaml
+++ b/neonapp/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.1.2
   in_app_purchase: ^3.2.3
   google_mobile_ads: ^5.3.1
+  lottie: ^3.2.0
  
 
 dev_dependencies:
@@ -84,6 +85,10 @@ flutter:
      - assets/images/comedyfest.jpeg
      - assets/images/maze.jpeg
      - assets/images/logo.jpeg
+     - assets/images/normandy.jpeg
+     - assets/animations/Camera.json
+     - assets/animations/Loading Animation.json
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
