--- a/neonfirebase/ios/Runner/Info.plist
+++ b/neonfirebase/ios/Runner/Info.plist
@@ -45,5 +45,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+       <string>We need to save photos to your library</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+       <string>We need to access your photo library</string>
+
 </dict>
 </plist>
