--- a/neonfirebase/pubspec.yaml
+++ b/neonfirebase/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_gallery_saver: ^2.0.3
   permission_handler: ^12.0.1
   http: ^1.4.0
+  firebase_remote_config: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -67,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/images/eurovision_logo.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
