--- a/neonfirebase/pubspec.yaml
+++ b/neonfirebase/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   permission_handler: ^12.0.1
   http: ^1.4.0
   firebase_remote_config: ^6.0.0
+  firebase_crashlytics: ^5.0.0
+  firebase_analytics: ^12.0.0
 
 dev_dependencies:
   flutter_test:
