--- a/myneonacademyapp/pubspec.yaml
+++ b/myneonacademyapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.5.3
   http: ^1.5.0
   cached_network_image: ^3.4.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
