--- a/myneonacademyapp/pubspec.yaml
+++ b/myneonacademyapp/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.5.0
   cached_network_image: ^3.4.1
   intl: ^0.20.2
+  dio: ^5.9.0
+  audioplayers: ^6.4.0
 
 dev_dependencies:
   flutter_test:
