--- a/myneonacademyapp/pubspec.yaml
+++ b/myneonacademyapp/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   intl: ^0.20.2
   dio: ^5.9.0
   audioplayers: ^6.4.0
+  sqflite: ^2.4.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
